fix: modify return data for question retrieval api